Chapter 1 Motivation update

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -3,19 +3,19 @@
 
 \chapter{Introduction}
 \label{chap:Introduction}
+% 4 pages in total
 
-\section{Motivation}
-
- In 2023 56\% of the human population already lives in urban areas with the number projected to continiously increase to 68\% by 2050 \footnote{https://ourworldindata.org/urbanization\#by-2050-more-than-two-thirds-of-the-world-will-live-in-urban-areas}. Combined with the ongoing climate change and urban densification, cities are facing many new challenges. With the removal of vegetation in favor of living space and the sealing of surfaces with heat-absorbing materials such as asphalt or concrete for streets and highways \cite{gret2020urban}, rising temperatures lead to new phenomena that pose risks for the urban citizens. A recent phenomenon is the appearance of so called urban heat-islands (UHI). A heat-island is a local occurrence of significantly higher temperatures than surrounding areas that pose a health risk, especially for the elderly, children or citizen with prior health-issues \cite{martin2015alternative}.\\
-% continuous data layer
-In order to detect UHIs, Land Surface Temperature (LST) is commonly used. While allowing for a cheap analysis of large areas without the need of ground weather-stations, this approach comes with certain downsides, such as low temporal and spatial resolution and restrictions such as only being able to measure temperatures when no clouds interfere with the microwaces send from the measuring satellite \cite{zhang2015estimation}. This spatial and temporal resolution, of f.e. spatial resolution of 0.01° longitude and 0.01° latitude (equal to roughly 1.11km by 1.11km) and temporal resolution of monthly average surface temperature as offered by LST data provided by the European Space Agency (ESA) Climate Office's data set \cite{ghent2022esalst}, is not enough to effectively analyze the urban microclimate. Another candidate that comes to mind are weather stations. They usually provide hourly, for current values sometimes even 10 min interval readings of temperature, rain and wind, but don't offer the necessary spatial resolution.
-Lastly, there is the possibility of deploying sensor networks to closely monitor the climate of the city, but this approach can be quite cost intensive for a large amount of sensors over a long time period \cite{chapman2015birmingham}. An alternative that is less costly would be to instead rely on citizen-owned sensor networks from the existing Smart Home and Internet of Things (IoT) infrastructure, like Sensor.Community \footnote{https://deutschland.maps.sensor.community/} and Netatmo \footnote{https://weathermap.netatmo.com/}, which offer a temporal resolution of 5 min for temperature and wind, hourly for rain, while also having a comparably high spatial resolution. This approach has the desired temporal resolution and has been shown to work well in \cite{meier2017crowdsourcing}, but there might be areas, such as industrial zones, where citizens are not able or not allowed to install their personal sensors. In order to also gain insights in such previously unobserved areas, we propose the usage of mobile sensors that could be installed on buses, bikes or e-scooters to gain temporary snapshots and improve the spatial resolution even further.
-As research realted activities commonly rely on continuous or gridded data fields, there needs to be a way to convert these single data points from the different sensors into a continuous data-layer.\\
-In this paper, we propose a solution to this problem by training a machine learning regression model, that allows for the interpolation of missing data-points. Based on sensor readings, from the sensor networks and mobile sensors, of commonly collected weather information, such as temperature, humidity, rain, pressure, wind, and possibly other variables such as vegetation indexes \cite{alonso2020new}, the model then creates a continuous data-layer that allows for a holistic view of the observed variable, in this case temperature.\\
-
-\todo{Readjust at the end of thesis}
+In 2023 56\% of the human population already lives in urban areas with the number projected to continiously increase to 68\% by 2050 \footnote{https://ourworldindata.org/urbanization\#by-2050-more-than-two-thirds-of-the-world-will-live-in-urban-areas}. Combined with the ongoing climate change and urban densification due to the need for more and more living space, cities are facing many new challenges. With the removal of vegetation in favor of living space and the sealing of surfaces with heat-absorbing materials such as asphalt or concrete for streets and highways~\cite{gret2020urban}, rising temperatures lead to new phenomena that pose risks for the urban citizens. One especially critical phenomenon is the urban heat-island (UHI). A UHI is a local occurrence of higher temperatures than surrounding rural areas that pose health risks, especially for the elderly, children or citizen with prior health-issues~\cite{martin2015alternative}, pedestrians comfort, and other city-related topics such as water- and energy-management. The research topic of UHI's has seen a huge amount of contributions in the last two decades, but according to Steward, \textit{controlled measurement} and \textit{openness of method} are still two mayor areas of weakness~\cite{stewart2011systematic}, that are related to difficulties in taking measurements in urban areas~\cite{oke2006guideline} and a lack of rigorous methodology.\\
+There are two mayor approaches to measure the temperature of a city. The first approach is to use satellites to measure Land Surface Temperature (LST). While allowing for an analysis of large areas without the need of ground weather-stations, this approach comes with certain downsides, such as low temporal and spatial resolution and restrictions such as only being able to measure temperatures when no clouds interfere with the microwaces send from the measuring satellite~\cite{zhang2015estimation}. The exact spatial and temporal resolution depends on the type of satellite used, with usual spatial resolutions ranging from 1km$^2$ to 5km$^2$ and usual temporal resolutions ranging from daily to monthly temperature values~\cite{ghent2022esalst}, however these resolutions are not enough to capture the microclimate of a city~\cite{voelkel2017towards}.\\
+In comparison, traditional meterological observation networks, such as the German Weather Service (DWD), offer a much higher temporal resolution at 10min intervals through the use of ground weather stations, however they are usually only available at very low spatial resolutions, as they are used to monitor the climate at a meso-scale level. Additionally, the placement of these stations is usually not optimized for the detection of UHI's, as they are commonly placed near to airports that are not located directly in the city center. They can however be used as reference stations to get an idea about the boundaries of the climate inside a city as they offer high quality data by using high quality reference sensors and follow WHO guidelines~\cite{oke2006guideline}.\\
+Lastly, there is the possibility of deploying sensor networks to closely monitor the climate of the city. These sensor networks can either be deployed professionally by the city itself or research projects for a limited time period, in that case called testbeds, or they can be deployed by citizens themselves, in that case called citizen-owned sensor networks or private weather station networks (PWS) in the case of crowd-sensing meterological data. Well-known examples of professionally setup testbeds include the Birmingham Urban Climate Laboratory (BUCL)~\cite{chapman2015birmingham} and the Helsinki Testbed~\cite{koskinen2011helsinki} that usually focus on measuring meso-scale weather phenomena and are very costly to run and maintain.
+PWS networks can either be run by citizens themselves, such as the Sensor.Community~\footnote{\url{https://deutschland.maps.sensor.community/}} project, or by companies, such as Netatmo~\footnote{\url{https://weathermap.netatmo.com/}}, however citizens are always responsible for the placement and maintenance of the individual sensors. Due to the lack of quality control, the data quality of these networks is usually not as high as the data quality of professional networks and require special data quality control (QC) steps~\cite{fenner2021crowdqc+, meier2017crowdsourcing}, however they offer a much higher spatial resolution and can be used to gain insights into the microclimate of a city. Recently, there have been efforts to combine the data from PWS networks, mainly from Netatmo, Wundermap, and Weather Underground, with data from national weather services, such as the DWD, to improve weather prediction quality. The main collaboration network in this area is EUMETNET which includes 31 european national meteorological services~\cite{hahn2022observations}.\\
+While these different approaches offer different advantages and disadvantages of measuring air temperature on the ground, they all have one thing in common: they only offer point measurements of the temperature at the location of the sensor. To get an overview of the temperature distribution across a city, interpolation methods are needed to create a continuous data-layer from the point measurements.
 
 \section{Objective}
+
+As research realted activities commonly rely on continuous or gridded data fields, there needs to be a way to convert these single data points from the different sensors into a continuous data-layer.\\
+In this paper, we propose a solution to this problem by training a machine learning regression model, that allows for the interpolation of missing data-points. Based on sensor readings, from the sensor networks and mobile sensors, of commonly collected weather information, such as temperature, humidity, rain, pressure, wind, and possibly other variables such as vegetation indexes \cite{alonso2020new}, the model then creates a continuous data-layer that allows for a holistic view of the observed variable, in this case temperature.\\
 
 current situation: abundance of data (data quality unknown), but different data sources at different places with different formats, making it hard to work with different sources at the same time
 - smart city example -> heat island detection
