--- a/references.bib
+++ b/references.bib
@@ -203,6 +203,13 @@
   publisher={Taylor \& Francis}
 }
 
+@misc{oke2004siting,
+  title={Siting and exposure of meteorological instruments at urban sites. 27th NATO/CCMS Int Tech Meeting on Air Pollution Modelling and Application},
+  author={Oke, TR},
+  year={2004},
+  publisher={Kluwer, Banff, Canada}
+}
+
 @article{oke2006guideline,
   author = {Oke, Timothy R},
   year = {2006},
