--- a/references.bib
+++ b/references.bib
@@ -203,6 +203,17 @@
   publisher={Taylor \& Francis}
 }
 
+@article{voogt2003thermal,
+  title={Thermal remote sensing of urban climates},
+  author={Voogt, James A and Oke, Tim R},
+  journal={Remote sensing of environment},
+  volume={86},
+  number={3},
+  pages={370--384},
+  year={2003},
+  publisher={Elsevier}
+}
+
 @misc{oke2004siting,
   title={Siting and exposure of meteorological instruments at urban sites. 27th NATO/CCMS Int Tech Meeting on Air Pollution Modelling and Application},
   author={Oke, TR},
@@ -254,6 +265,17 @@
   pages={146389},
   year={2021},
   publisher={Elsevier}
+}
+
+@article{fenner2019contrasting,
+  title={Contrasting changes of urban heat island intensity during hot weather episodes},
+  author={Fenner, Daniel and Holtmann, Achim and Meier, Fred and Langer, Ines and Scherer, Dieter},
+  journal={Environmental Research Letters},
+  volume={14},
+  number={12},
+  pages={124013},
+  year={2019},
+  publisher={IOP Publishing}
 }
 
 @book{leclerc2014footprints,
@@ -743,4 +765,68 @@
   pages={18--27},
   year={2017},
   publisher={Elsevier}
+}
+
+@article{lorenz2019detection,
+  title={Detection of a climate change signal in extreme heat, heat stress, and cold in Europe from observations},
+  author={Lorenz, Ruth and Stalhandske, Z{\'e}lie and Fischer, Erich M},
+  journal={Geophysical Research Letters},
+  volume={46},
+  number={14},
+  pages={8363--8374},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{kovats2008heat,
+  title={Heat stress and public health: a critical review},
+  author={Kovats, R Sari and Hajat, Shakoor},
+  journal={Annu. Rev. Public Health},
+  volume={29},
+  pages={41--55},
+  year={2008},
+  publisher={Annual Reviews}
+}
+
+@article{kjellstrom2016heat,
+  title={Heat, human performance, and occupational health: a key issue for the assessment of global climate change impacts},
+  author={Kjellstrom, Tord and Briggs, David and Freyberg, Chris and Lemke, Bruno and Otto, Matthias and Hyatt, Olivia},
+  journal={Annual review of public health},
+  volume={37},
+  pages={97--112},
+  year={2016},
+  publisher={Annual Reviews}
+}
+
+@article{obradovich2018empirical,
+  title={Empirical evidence of mental health risks posed by climate change},
+  author={Obradovich, Nick and Migliorini, Robyn and Paulus, Martin P and Rahwan, Iyad},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={115},
+  number={43},
+  pages={10953--10958},
+  year={2018},
+  publisher={National Acad Sciences}
+}
+
+@article{obradovich2017nighttime,
+  title={Nighttime temperature and human sleep loss in a changing climate},
+  author={Obradovich, Nick and Migliorini, Robyn and Mednick, Sara C and Fowler, James H},
+  journal={Science advances},
+  volume={3},
+  number={5},
+  pages={e1601555},
+  year={2017},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{stone2013climate,
+  title={Climate change adaptation through urban heat management in Atlanta, Georgia},
+  author={Stone Jr, Brian and Vargo, Jason and Liu, Peng and Hu, Yongtao and Russell, Armistead},
+  journal={Environmental science \& technology},
+  volume={47},
+  number={14},
+  pages={7780--7786},
+  year={2013},
+  publisher={ACS Publications}
 }
